# flake8-custom-trailing-commas

./: .gitignore  LICENSE  README.md  astpretty.py  flake8_tuple_trailing_commas.py  flake8_tuple_trailing_commas_test.py  setup.cfg  tests.py
