[metadata]
name = flake8_tuple_trailing_commas
version = 0.1.4
author = Drozdov David
author_email = drozdovud@gmail.com
description = flake8 plugin for enforcing few rules
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davemus/flake8-custom-trailing-commas
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
py_modules = flake8_tuple_trailing_commas
install_requires = 
    flake8>=3.7
    importlib-metadata>=0.9;python_version<="3.8"

[options.entry_points]
flake8.extension =
    CMA=flake8_tuple_trailing_commas:Plugin
